--- a/src/kangservis/util/db.properties
+++ b/src/kangservis/util/db.properties
@@ -1,4 +1,3 @@
-# TODO: Masukkan Nama DBnya
-DB_URL=mysql:jdbc://localhost:3306/db_
+DB_URL=jdbc:mysql://localhost:3306/pbo_praktik
 DB_USER=root
 DB_PASSWORD=
